# embedded_QT_UI

./: CMakeLists.txt  README.md  arm-toolchain.cmake  my_qtScreen.service
include/: media_player.h  sys_status_widget.h  time_widget.h  virtualKeyboard.h  widget.h  wifi_widget.h  wifiset.h
src/: media_player.cpp  sys_status_widget.cpp  time_widget.cpp  virtualKeyboard.cpp  widget.cpp  wifi_widget.cpp  wifiset.cpp
